--- a/webview-ui/src/i18n/locales/hi/chat.json
+++ b/webview-ui/src/i18n/locales/hi/chat.json
@@ -7,20 +7,15 @@
 		"tokens": "Tokens:",
 		"cache": "कैश:",
 		"apiCost": "API लागत:",
+		"condenseContext": "संदर्भ को बुद्धिमानी से संघनित करें",
 		"contextWindow": "संदर्भ लंबाई:",
 		"closeAndStart": "कार्य बंद करें और नया शुरू करें",
 		"export": "कार्य इतिहास निर्यात करें",
-		"delete": "कार्य हटाएं (पुष्टि को छोड़ने के लिए Shift + क्लिक)",
-		"condenseContext": "संदर्भ को बुद्धिमानी से संघनित करें",
-		"share": "कार्य साझा करें"
+		"share": "कार्य साझा करें",
+		"delete": "कार्य हटाएं (पुष्टि को छोड़ने के लिए Shift + क्लिक)"
 	},
 	"unpin": "पिन करें",
 	"pin": "अवपिन करें",
-	"tokenProgress": {
-		"availableSpace": "उपलब्ध स्थान: {{amount}} tokens",
-		"tokensUsed": "प्रयुक्त tokens: {{used}} / {{total}}",
-		"reservedForResponse": "मॉडल प्रतिक्रिया के लिए आरक्षित: {{amount}} tokens"
-	},
 	"retry": {
 		"title": "पुनः प्रयास करें",
 		"tooltip": "ऑपरेशन फिर से प्रयास करें"
@@ -37,6 +32,11 @@
 		"title": "सहेजें",
 		"tooltip": "फ़ाइल परिवर्तन सहेजें"
 	},
+	"tokenProgress": {
+		"availableSpace": "उपलब्ध स्थान: {{amount}} tokens",
+		"tokensUsed": "प्रयुक्त tokens: {{used}} / {{total}}",
+		"reservedForResponse": "मॉडल प्रतिक्रिया के लिए आरक्षित: {{amount}} tokens"
+	},
 	"reject": {
 		"title": "अस्वीकार करें",
 		"tooltip": "इस क्रिया को अस्वीकार करें"
@@ -45,6 +45,14 @@
 	"approve": {
 		"title": "स्वीकृत करें",
 		"tooltip": "इस क्रिया को स्वीकृत करें"
+	},
+	"read-batch": {
+		"approve": {
+			"title": "सभी स्वीकृत करें"
+		},
+		"deny": {
+			"title": "सभी अस्वीकार करें"
+		}
 	},
 	"runCommand": {
 		"title": "कमांड चलाएँ",
@@ -94,6 +102,7 @@
 	"selectMode": "इंटरैक्शन मोड चुनें",
 	"selectApiConfig": "एपीआई कॉन्फ़िगरेशन का चयन करें",
 	"enhancePrompt": "अतिरिक्त संदर्भ के साथ प्रॉम्प्ट बढ़ाएँ",
+	"enhancePromptDescription": "'प्रॉम्प्ट बढ़ाएँ' बटन अतिरिक्त संदर्भ, स्पष्टीकरण या पुनर्विचार प्रदान करके आपके अनुरोध को बेहतर बनाने में मदद करता है। यहां अनुरोध लिखकर देखें और यह कैसे काम करता है यह देखने के लिए बटन पर फिर से क्लिक करें।",
 	"addImages": "संदेश में चित्र जोड़ें",
 	"sendMessage": "संदेश भेजें",
 	"typeMessage": "एक संदेश लिखें...",
@@ -101,17 +110,11 @@
 	"addContext": "संदर्भ जोड़ने के लिए @, मोड बदलने के लिए /",
 	"dragFiles": "फ़ाइलें खींचने के लिए shift दबाकर रखें",
 	"dragFilesImages": "फ़ाइलें/चित्र खींचने के लिए shift दबाकर रखें",
-	"enhancePromptDescription": "'प्रॉम्प्ट बढ़ाएँ' बटन अतिरिक्त संदर्भ, स्पष्टीकरण या पुनर्विचार प्रदान करके आपके अनुरोध को बेहतर बनाने में मदद करता है। यहां अनुरोध लिखकर देखें और यह कैसे काम करता है यह देखने के लिए बटन पर फिर से क्लिक करें।",
 	"errorReadingFile": "फ़ाइल पढ़ने में त्रुटि:",
 	"noValidImages": "कोई मान्य चित्र प्रोसेस नहीं किया गया",
 	"separator": "विभाजक",
 	"edit": "संपादित करें...",
 	"forNextMode": "अगले मोड के लिए",
-	"error": "त्रुटि",
-	"diffError": {
-		"title": "संपादन असफल"
-	},
-	"troubleMessage": "Roo को समस्या हो रही है...",
 	"apiRequest": {
 		"title": "API अनुरोध",
 		"failed": "API अनुरोध विफल हुआ",
@@ -136,11 +139,19 @@
 		},
 		"current": "वर्तमान"
 	},
+	"contextCondense": {
+		"title": "संदर्भ संक्षिप्त किया गया",
+		"condensing": "संदर्भ संघनित कर रहा है...",
+		"errorHeader": "संदर्भ संघनित करने में विफल",
+		"tokens": "टोकन"
+	},
 	"instructions": {
 		"wantsToFetch": "Roo को वर्तमान कार्य में सहायता के लिए विस्तृत निर्देश प्राप्त करना है"
 	},
 	"fileOperations": {
 		"wantsToRead": "Roo इस फ़ाइल को पढ़ना चाहता है:",
+		"wantsToReadMultiple": "Roo कई फ़ाइलें पढ़ना चाहता है:",
+		"wantsToReadAndXMore": "रू इस फ़ाइल को और {{count}} अन्य को पढ़ना चाहता है:",
 		"wantsToReadOutsideWorkspace": "Roo कार्यक्षेत्र के बाहर इस फ़ाइल को पढ़ना चाहता है:",
 		"didRead": "Roo ने इस फ़ाइल को पढ़ा:",
 		"wantsToEdit": "Roo इस फ़ाइल को संपादित करना चाहता है:",
@@ -150,9 +161,7 @@
 		"didSearchReplace": "Roo ने इस फ़ाइल में खोज और प्रतिस्थापन किया:",
 		"wantsToInsert": "Roo इस फ़ाइल में सामग्री डालना चाहता है:",
 		"wantsToInsertWithLineNumber": "Roo इस फ़ाइल की {{lineNumber}} लाइन पर सामग्री डालना चाहता है:",
-		"wantsToInsertAtEnd": "Roo इस फ़ाइल के अंत में सामग्री जोड़ना चाहता है:",
-		"wantsToReadAndXMore": "रू इस फ़ाइल को और {{count}} अन्य को पढ़ना चाहता है:",
-		"wantsToReadMultiple": "Roo कई फ़ाइलें पढ़ना चाहता है:"
+		"wantsToInsertAtEnd": "Roo इस फ़ाइल के अंत में सामग्री जोड़ना चाहता है:"
 	},
 	"directoryOperations": {
 		"wantsToViewTopLevel": "Roo इस निर्देशिका में शीर्ष स्तर की फ़ाइलें देखना चाहता है:",
@@ -163,6 +172,11 @@
 		"didViewDefinitions": "Roo ने इस निर्देशिका में उपयोग किए गए सोर्स कोड परिभाषा नामों को देखा:",
 		"wantsToSearch": "Roo इस निर्देशिका में <code>{{regex}}</code> के लिए खोज करना चाहता है:",
 		"didSearch": "Roo ने इस निर्देशिका में <code>{{regex}}</code> के लिए खोज की:"
+	},
+	"codebaseSearch": {
+		"wantsToSearch": "Roo कोडबेस में <code>{{query}}</code> खोजना चाहता है:",
+		"wantsToSearchWithPath": "Roo <code>{{path}}</code> में कोडबेस में <code>{{query}}</code> खोजना चाहता है:",
+		"didSearch": "<code>{{query}}</code> के लिए {{count}} परिणाम मिले:"
 	},
 	"commandOutput": "कमांड आउटपुट",
 	"response": "प्रतिक्रिया",
@@ -190,6 +204,11 @@
 		"hasQuestion": "Roo का एक प्रश्न है:"
 	},
 	"taskCompleted": "कार्य पूरा हुआ",
+	"error": "त्रुटि",
+	"diffError": {
+		"title": "संपादन असफल"
+	},
+	"troubleMessage": "Roo को समस्या हो रही है...",
 	"powershell": {
 		"issues": "ऐसा लगता है कि आपको Windows PowerShell के साथ समस्याएँ हो रही हैं, कृपया इसे देखें"
 	},
@@ -197,19 +216,6 @@
 		"title": "स्वत:-स्वीकृति:",
 		"none": "कोई नहीं",
 		"description": "स्वत:-स्वीकृति Roo Code को अनुमति मांगे बिना क्रियाएँ करने की अनुमति देती है। केवल उन क्रियाओं के लिए सक्षम करें जिन पर आप पूरी तरह से विश्वास करते हैं। अधिक विस्तृत कॉन्फ़िगरेशन <settingsLink>सेटिंग्स</settingsLink> में उपलब्ध है।"
-	},
-	"reasoning": {
-		"thinking": "विचार कर रहा है",
-		"seconds": "{{count}} सेकंड"
-	},
-	"contextCondense": {
-		"title": "संदर्भ संक्षिप्त किया गया",
-		"condensing": "संदर्भ संघनित कर रहा है...",
-		"errorHeader": "संदर्भ संघनित करने में विफल",
-		"tokens": "टोकन"
-	},
-	"followUpSuggest": {
-		"copyToInput": "इनपुट में कॉपी करें (या Shift + क्लिक)"
 	},
 	"announcement": {
 		"title": "🎉 Roo Code {{version}} रिलीज़ हुआ",
@@ -220,6 +226,13 @@
 		"feature3": "<bold>उन्नत संघनन सेटिंग्स</bold>: <contextSettingsLink>संदर्भ सेटिंग्स</contextSettingsLink> के माध्यम से स्वचालित संघनन कब और कैसे होता है इसे फाइन-ट्यून करें",
 		"hideButton": "घोषणा छिपाएँ",
 		"detailsDiscussLinks": "<discordLink>Discord</discordLink> और <redditLink>Reddit</redditLink> पर अधिक जानकारी प्राप्त करें और चर्चा में भाग लें 🚀"
+	},
+	"reasoning": {
+		"thinking": "विचार कर रहा है",
+		"seconds": "{{count}} सेकंड"
+	},
+	"followUpSuggest": {
+		"copyToInput": "इनपुट में कॉपी करें (या Shift + क्लिक)"
 	},
 	"browser": {
 		"rooWantsToUse": "Roo ब्राउज़र का उपयोग करना चाहता है:",
@@ -264,19 +277,6 @@
 			"title": "स्वत:-स्वीकृत अनुरोध सीमा पहुंची",
 			"description": "Roo {{count}} API अनुरोध(धों) की स्वत:-स्वीकृत सीमा तक पहुंच गया है। क्या आप गणना को रीसेट करके कार्य जारी रखना चाहते हैं?",
 			"button": "रीसेट करें और जारी रखें"
-		}
-	},
-	"codebaseSearch": {
-		"wantsToSearch": "Roo कोडबेस में <code>{{query}}</code> खोजना चाहता है:",
-		"wantsToSearchWithPath": "Roo <code>{{path}}</code> में कोडबेस में <code>{{query}}</code> खोजना चाहता है:",
-		"didSearch": "<code>{{query}}</code> के लिए {{count}} परिणाम मिले:"
-	},
-	"read-batch": {
-		"approve": {
-			"title": "सभी स्वीकृत करें"
-		},
-		"deny": {
-			"title": "सभी अस्वीकार करें"
 		}
 	}
 }
