--- a/webview-ui/src/i18n/locales/fr/mcp.json
+++ b/webview-ui/src/i18n/locales/fr/mcp.json
@@ -14,6 +14,7 @@
 	},
 	"editGlobalMCP": "Modifier le MCP global",
 	"editProjectMCP": "Modifier le MCP du projet",
+	"refreshMCP": "Rafraîchir les serveurs MCP",
 	"learnMoreEditingSettings": "En savoir plus sur la modification des fichiers de configuration MCP",
 	"tool": {
 		"alwaysAllow": "Toujours autoriser",
@@ -53,6 +54,5 @@
 	"serverStatus": {
 		"retrying": "Nouvelle tentative...",
 		"retryConnection": "Réessayer la connexion"
-	},
-	"refreshMCP": "Rafraîchir les serveurs MCP"
+	}
 }
