--- a/webview-ui/src/i18n/locales/hi/mcp.json
+++ b/webview-ui/src/i18n/locales/hi/mcp.json
@@ -14,6 +14,7 @@
 	},
 	"editGlobalMCP": "ग्लोबल MCP एडिट करें",
 	"editProjectMCP": "प्रोजेक्ट MCP एडिट करें",
+	"refreshMCP": "एमसीपी सर्वर रीफ्रेश करें",
 	"learnMoreEditingSettings": "MCP सेटिंग्स फाइल एडिट करने के बारे में जानें",
 	"tool": {
 		"alwaysAllow": "हमेशा अनुमति दें",
@@ -53,6 +54,5 @@
 	"serverStatus": {
 		"retrying": "फिर से कोशिश कर रहा है...",
 		"retryConnection": "कनेक्शन फिर से आज़माएँ"
-	},
-	"refreshMCP": "एमसीपी सर्वर रीफ्रेश करें"
+	}
 }
